# gametau

./: .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  CUSTOMER-PROXY-VALIDATION.md  Cargo.toml  ELECTROBUN-SHOWCASE.md  INTEGRATION-PROXY-VALIDATION.md  LICENSE  README.md  RUNTIME-PORTABILITY-READINESS.md  SECURITY.md  SOLAR-TYCOON-GODOT-PORT-READINESS.md  biome.json  llms-full.txt  llms.txt  package.json  wrangler.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release/: RELEASE-GATE-CHECKLIST.md  RELEASE-INCIDENT-RESPONSE.md  WORKERS-DEPLOYMENT.md
.github/workflows/: ci.yml  deploy-workers-prod.yml  deploy-workers-staging.yml  electrobun-dogfood.yml  pages.yml  publish.yml  staging-cloudflare.yml
crates/webtau/: Cargo.toml
crates/webtau-macros/: Cargo.toml
crates/webtau-macros/src/: lib.rs
crates/webtau-macros/tests/: command_tests.rs
crates/webtau-macros/tests/compile-fail/: async_fn.rs  async_fn.stderr  impl_trait_return.rs  no_params.rs  no_params.stderr  non_ref_state.rs  non_ref_state.stderr  reserved_prefix.rs  reserved_prefix.stderr  self_method.rs  self_method.stderr  tuple_pattern.rs  tuple_pattern.stderr
crates/webtau-macros/tests/compile-pass/: async_result_return.rs  custom_state_name.rs  multi_args.rs  mut_param.rs  rename_all_snake_case.rs  result_return.rs  simple_immutable.rs  simple_mutable.rs
crates/webtau-macros/tests/support/tauri/: Cargo.toml
crates/webtau-macros/tests/support/tauri-macros/: Cargo.toml
crates/webtau-macros/tests/support/tauri-macros/src/: lib.rs
crates/webtau-macros/tests/support/tauri/src/: lib.rs
crates/webtau/src/: lib.rs
docs/: BATTLESTATION-DESIGN-BRIEF.md  BATTLESTATION-SHOWCASE.md  COMMERCIAL-LICENSE.md  ELECTROBUN-DOGFOOD-TRIAGE.md  ELECTROBUN-EXPERIMENTAL.md  GETTING-STARTED.md  PARITY-MATRIX.md  POST-V0.3-STABILIZATION.md  RELEASE-GATE-CHECKLIST.md  RELEASE-INCIDENT-RESPONSE.md  SESSION-BOOTSTRAP-RFC.md  STAGING-DEPLOYMENT.md
examples/battlestation/: README.md  electrobun.config.ts  index.html  package.json
examples/battlestation/public/assets/: battlestation-theme.json  mission-stub.json
examples/battlestation/src/: index.ts
examples/battlestation/src-tauri/: Cargo.toml
examples/battlestation/src-tauri/app/: Cargo.toml  tauri.conf.json
examples/battlestation/src-tauri/commands/: Cargo.toml
examples/battlestation/src-tauri/commands/src/: commands.rs  lib.rs
examples/battlestation/src-tauri/core/: Cargo.toml
examples/battlestation/src-tauri/wasm/: Cargo.toml
examples/battlestation/src-tauri/wasm/src/: lib.rs
examples/battlestation/src/bun/: browser.ts  gpu.ts  index.js
examples/battlestation/src/game/: config.ts  runtime.ts  scene-gpu.ts  scene.ts
examples/battlestation/src/services/: backend.ts  comms.ts  profile.ts
examples/battlestation/src/types/: electrobun-bun.d.ts  electrobun.d.ts  wasm.d.ts
examples/counter/: electrobun.config.ts  index.html  package.json  vite.config.ts
examples/counter/src/: index.ts
examples/counter/src-tauri/: Cargo.toml
examples/counter/src-tauri/app/: Cargo.toml
examples/counter/src-tauri/commands/: Cargo.toml
examples/counter/src-tauri/wasm/: Cargo.toml
examples/counter/src-tauri/wasm/src/: lib.rs
examples/counter/src/bun/: index.js
examples/counter/src/services/: backend.ts
examples/electrobun-counter/: README.md  electrobun.config.ts  index.html  package.json  tsconfig.json
examples/electrobun-counter/src/: electrobun-provider.ts  hybrid-wgpu.test.ts  hybrid-wgpu.ts  index.ts
examples/electrobun-counter/src-tauri/: Cargo.toml
examples/electrobun-counter/src-tauri/app/: Cargo.toml  tauri.conf.json
examples/electrobun-counter/src-tauri/core/: Cargo.toml
examples/electrobun-counter/src/bun/: browser.ts  gpu.ts  index.ts
examples/electrobun-counter/src/types/: electrobun-bun.d.ts  electrobun.d.ts  wasm.d.ts
examples/pong/: electrobun.config.ts  index.html  package.json  vite.config.ts
examples/pong/public/assets/: pong-theme.json
examples/pong/src/: index.ts
examples/pong/src-tauri/: Cargo.toml
examples/pong/src-tauri/app/: Cargo.toml  tauri.conf.json
examples/pong/src-tauri/app/src/: lib.rs
examples/pong/src-tauri/commands/: Cargo.toml
examples/pong/src-tauri/core/: Cargo.toml
examples/pong/src-tauri/wasm/: Cargo.toml
examples/pong/src-tauri/wasm/src/: lib.rs
examples/pong/src/bun/: index.js
examples/pong/src/game/: scene.ts
examples/pong/src/services/: backend.ts
plugins/gametau-dev/.claude-plugin/: plugin.json
plugins/gametau-dev/agents/: gametau-expert.md
plugins/gametau-dev/skills/gametau-scaffold/: SKILL.md
plugins/gametau-dev/skills/gametau-troubleshoot/: SKILL.md
plugins/gametau-dev/skills/webtau-api/: SKILL.md
plugins/gametau-dev/skills/webtau-command-macro/: SKILL.md
scripts/: build-api-docs.mjs  smoke-webtau-esm-consumer.mjs
site/: index.html  package.json  vite.config.ts
site/src/: main.css
tests/fixtures/minimal-game/: index.html  package.json  vite.config.ts
tests/fixtures/minimal-game/src/: index.ts
tests/fixtures/minimal-game/src-tauri/: Cargo.toml
tests/fixtures/minimal-game/src-tauri/wasm/: Cargo.toml
tests/fixtures/minimal-game/src-tauri/wasm/src/: lib.rs
(+13 files in other folders)
