[package]
name = "webtau-macros"
description = "Proc macros for webtau (v2: #[command] dual-target generation)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
tauri = { path = "tests/support/tauri" }
webtau = { path = "../webtau" }
serde = { version = "1", features = ["derive"] }
