[package]
name = "webtau"
description = "Deploy Tauri games to web + desktop from one codebase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
webtau-macros = { path = "../webtau-macros", version = "=0.5.0-alpha.1" }
