[package]
name = "minimal-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
webtau = { path = "../../../../../crates/webtau" }
minimal-core = { path = "../core" }
